# chatbot

./: .gitignore  how_to_run.txt  musttodotask.txt
.github/: copilot-instructions.md
backend/: db.py  main.py  pyproject.toml
backend/go-backend/: go.mod  go.sum  main.go
backend/go-backend/config/: config.go
backend/golang/: README.md  go.mod  go.sum  main.go
backend/nl2sql/: main.py  pyproject.toml
backend/nl2sql/nl2sql/: prompt_template.py  run.py  sqlcoder_chain.py
backend/python-nl2sql/: README_PIPELINE.md  main.py  model.py  nl2sql.py  pyproject.toml  requirements.txt  result.txt  test_endpoint.py  test_pipeline.py
backend/python-nl2sql/.github/: copilot-instructions.md
backend/python-nl2sql/database/: file_storage.py
backend/python-nl2sql/models/: __init__.py  chat.py  column_metadata.py  data_quality.py  database.py  file.py  user.py
backend/python-nl2sql/services/: chat_service.py  file_service.py  memory_service.py  test_metadata.py  two_model_pipeline.py
backend/python-nl2sql/utils/: nl2sql_helpers.py
frontend-new/: DUAL_BACKEND_README.md  README.md  package-lock.json  package.json
frontend-new/src/: App.css  App.tsx  index.css
frontend-new/src/components/: Auth.css  ChatSidebar.tsx  ChatWindow.tsx  Dashboard.tsx  Login.tsx  NewChatModal.tsx  ProtectedRoute.tsx  Register.tsx
frontend-new/src/contexts/: AuthContext.tsx
frontend-new/src/services/: api.ts  dualBackendService.ts
frontend-new/src/types/: api.ts
frontend/chatxl/: index.html  package-lock.json  package.json
frontend/chatxl/src/: App.css  App.tsx  (+1 more)
(+38 files in other folders)
