[project]
name = "python-nl2sql"
version = "0.1.0"
description = "File upload service with pandas processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "pandas>=2.3.3",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "openpyxl>=3.1.2",
    "numpy>=1.24.0",
    "dask>=2025.9.1",
    "pyarrow>=21.0.0",
    "psutil>=7.1.0",
    "joblib>=1.5.2",
    "scipy>=1.16.2",
    "langchain-community>=0.3.30",
    "redis>=5.0.0",
    "langchain-redis>=0.1.4",
]
