[project]
name = "python-nl2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2>=2.9.10",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
